--- a/写代码/css/元素水平垂直居中/Flex.html
+++ b/写代码/css/元素水平垂直居中/Flex.html
@@ -15,6 +15,10 @@
       background: #f0a238;
       
   }
+  /* flex: 1; 缩写 */
+  /* flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0%; */
 </style>
 <p>flex</p>
 <div class="father">
